navber part add

--- a/index.html
+++ b/index.html
@@ -13,9 +13,27 @@
     />
     <!-- =====style===== -->
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/all.min.css" />
   </head>
   <body>
-  
+    <!-- ==navber part starts here=== -->
+    <nav>
+      <div class="container">
+        <div class="sidebyside">
+          <div class="logo">
+            <img src="./images/logo.png" alt="logo" />
+          </div>
+          <div class="nav_items">
+            <ul>
+              <li>About Us</li>
+              <li>Services</li>
+              <li>Portfolio</li>
+              <li>Contact Us</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- ==navber part ends here=== -->
   </body>
 </html>
