added about part

--- a/index.html
+++ b/index.html
@@ -35,5 +35,26 @@
       </div>
     </nav>
     <!-- ==navber part ends here=== -->
+      <!-- ====about part starts here===== -->
+      <section id="about">
+        <div class="container">
+          <div class="sidebyside">
+            <div class="left">
+              <h4>About Me</h4>
+              <h2>You can’t  use up creativity.
+                The more you use, the more 
+                you have in your signifant mind.</h2>
+                <p>Being the savage's bowsman, that is, the person who pulled the bow-oar in his boat (the second one from forward), it was my cheerful duty to attend upon him while taking that hard-scrabble scramble upon the dead whale's back. You have seen Italian organ-boys </p>
+                <a href="#">Download Resume</a>
+            </div>
+            <div class="right">
+              <h2>Any type of question & Discussion.</h2>
+              <p>Being the savage's bowsman, that is, the person who pulled the bow-oar in his boat</p>
+              <a href="mailto:WilliamAndersons@william.std">WilliamAndersons@william.std</a>
+            </div>
+          </div>
+        </div>
+      </section>
+     <!-- ====about part ends here===== -->
   </body>
 </html>
