--- a/index.html
+++ b/index.html
@@ -56,5 +56,31 @@
         </div>
       </section>
      <!-- ====about part ends here===== -->
+           <!-- ====portfolio part start here===== -->
+           <section id="portfolio">
+            <div class="container">
+              <div class="header">
+                <h4 class="title">Portfolio</h4>
+                <h2 class="main_title">My Work Recently</h2>
+              </div>
+              <div class="content">
+                <ul>
+                  <li>All</li>
+                  <li>Illustration</li>
+                  <li>UI/UX</li>
+                  <li>Logo</li>
+                </ul>
+              </div>
+              <div class="sidebyside">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+              </div>
+            </div>
+          </section>
+         <!-- ====portfolio part ends here===== -->
   </body>
 </html>
