--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
       </div>
     </nav>
     <!-- ==navber part ends here=== -->
+      <!-- =====bnner part starts here==== -->
+      <section id="bnner">
+        <div class="container">
+          <div class="sidebyside">
+            <div class="left">
+              <h4>Hello i’m <strong>Visual Designer</strong></h4>
+              <h1>William Andersons</h1>
+              <p>My ultimate motto is to fulfill the demand of the buyers by making them satisfied with proper file delivery in time and without delay.</p>
+              <div class="button">
+                <a href="#">Hire Me</a>
+                <a href="#">DOWNLOAD RESUME</a>
+              </div>
+            </div>
+            <div class="right">
+              <img src="./images/bnner.png" alt="bnner">
+            </div>
+          </div>
+        </div>
+       </section>
+      <!-- =====bnner part end here==== -->
+  
     <!-- ====about part starts here===== -->
     <section id="about">
       <div class="container">
