--- a/index.html
+++ b/index.html
@@ -89,6 +89,35 @@
       </div>
     </section>
     <!-- ====about part ends here===== -->
+      <!-- ====skill part start here===== -->
+      <section id="skill">
+        <div class="container">
+          <div class="header">
+            <h4 class="title">skills</h4>
+            <h2 class="main_title">What Can I Do</h2>
+          </div>
+          <div class="sidebyside">
+            <div class="item">
+            <h3>Illustrator</h3>
+            <p>Being the savage's bowsman, that is, the person who pulled the bow-oar in his boat, Being the savage's bowsman, that is, the person who pulled</p>
+            <a href="#">Learn More</a>
+            </div>
+            <div class="item">
+            <h3>Illustrator</h3>
+            <p>Being the savage's bowsman, that is, the person who pulled the bow-oar in his boat, Being the savage's bowsman, that is, the person who pulled</p>
+            <a href="#">Learn More</a>
+            </div>
+            <div class="item">
+            <h3>Illustrator</h3>
+            <p>Being the savage's bowsman, that is, the person who pulled the bow-oar in his boat, Being the savage's bowsman, that is, the person who pulled</p>
+            <a href="#">Learn More</a>
+            </div>
+            
+          </div>
+        </div>
+      </section>
+     <!-- ====skill part ends here===== -->
+
     <!-- ====portfolio part start here===== -->
     <section id="portfolio">
       <div class="container">
@@ -115,6 +144,41 @@
       </div>
     </section>
     <!-- ====portfolio part ends here===== -->
+     <!-- ====Testimonial part start here===== -->
+     <section id="testimonial">
+      <div class="container">
+        <div class="sidebyside">
+          <div class="left">
+            <h4>Testimonials</h4>
+            <h2>What they say about me</h2>
+            <p>Being the savage's bowsman, that is, the person who pulled the bow-oar in his boat (the second on.</p>
+            <i class="fa-solid fa-angle-left"></i>
+            <i class="fa-solid fa-angle-right"></i>
+          </div>
+          <div class="right">
+          <div class="item">
+            <div class="testmonail_img">
+              <img src="./images/tastmonial.png" alt="tastmonial">
+            </div>
+            <i class="fa-solid fa-quote-left"></i>
+          <p>So strongly and metaphysically did I conceive of my situation then, that while earnestly watching his motions, I seemed distinctly to perceive that my own individuali.</p>
+          <h5>Cardarion Hart </h5>
+          <h6>CEO of MANTUL </h6>
+          </div>
+          <div class="item">
+            <div class="testmonail_img">
+              <img src="./images/tastmonial.png" alt="tastmonial">
+            </div>
+            <i class="fa-solid fa-quote-left"></i>
+          <p>I have hinted that I would often jerk poor Queequeg from between the whale and the ship—where he would occasionally fall, from the incessant rolling and swaying of bo.</p>
+          <h5>Kobus van de Vegte </h5>
+          <h6>CEO of SUKSESPOLL</h6>
+          </div>
+        </div>
+      </div>
+    </section>
+   <!-- ====Testimonial part ends here===== -->
+
     <!-- ====logo part start here===== -->
     <section id="logo">
       <div class="container">
@@ -138,5 +202,25 @@
       </div>
     </section>
     <!-- ====logo part ends here===== -->
+      <!-- ====footer part start here===== -->
+      <footer>
+        <div class="container">
+          <div class="wrapper">
+            <div class="content">
+              <h4>Contact Us</h4>
+              <h2>Let’s talk, and make something great</h2>
+              <a href="#">Contact Us</a>
+            </div>
+            <div class="copy">
+              <img src="./images/footerLogo.png" alt="footerLogo">
+              <p>Copyright © 2020 william.std | all right reserved</p>
+            </div>
+          </div>
+       
+        </div>
+        <div class="border"></div>
+      </footer>
+     <!-- ====footer part ends here===== -->
+
   </body>
 </html>
